@@ -1,5 +1,6 @@
 V.Next
 ---------
+- [MINOR] Add support for per tenant flighting in broker (#2433)
 - [MINOR] Fix AccountManager Strategy (#2427)
 - [MINOR] Add MessageDigest to ICryptoFactory (#2423)
 - [PATCH] Adding check for OS version for passkeys (#2419)
